# Qwen3-TTS-with-OpenClaw

./: .gitignore  LOCAL_QWEN3TTS_PLAN_CHECKLIST.md  PLAN_QWEN3TTS_1.7B_CPU_LOCAL.md  README.md  pyproject.toml
scripts/: clone-from-audio.sh  qtts-run.sh  speak.sh
src/qtts/: __init__.py  audio_utils.py  cli.py  config.py  constants.py  engine.py  errors.py  logging_utils.py  prompt_codec.py  queue_store.py  service.py  text_utils.py  voice_store.py  worker_lock.py
tests/: test_cli_build_service.py  test_cli_parser_cpu_17b.py  test_engine_cpu_guard.py  test_queue_store.py  test_text_utils.py
